[project]
name = "electric-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairocffi>=1.7.1",
    "google-cloud-aiplatform>=1.83.0",
    "google-genai>=1.5.0",
    "igraph>=0.11.8",
    "ipykernel>=6.29.5",
    "ipysigma>=0.24.5",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]
